--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.3", features = ["derive"] }
+toml = { version = "0.7.6" }
+serde = { version = "1.0.183" }
+serde_derive = { version = "1.0.183" }
+regex = { version = "1.9.3" }
